# AgenticAnalytics

./: .env.example  .gitignore  Agentic_Analytics_System_Implementation_Plan.md  SKILL.md  app.py  architecture.excalidraw  chainlit.md  checks.py  config.py  create_excalidraw.py  datapre.ipynb  environment_info.md  flow.excalidraw  pyproject.toml  slide_improvement_plan.md  test_gemini.py  test_llm.py  test_pydantic.py
.chainlit/: config.toml
.claude/: CLAUDE.md  settings.local.json
.data/states/: e1069b58-95a3-422f-9e60-31a60e3682df.json
.data/threads/: e1069b58-95a3-422f-9e60-31a60e3682df.json
.data/users/: admin.json
.files/375b2e0b-6ffc-407c-9fc5-30f9720ba963/: 2a062d2a-7483-4222-a2dd-d428a9c9315f.json  6be6d7d4-85ac-4253-b2dc-499f046a283f.json  79577202-74a0-41b2-8060-4165026d0de6.json  7d9de875-22ea-499b-b324-2f2c69ae7426.json  87717165-0906-49bf-b25e-b1f240cbf5c0.json  8d90e656-84a7-4b86-aad4-0e31be211f03.json  cc504fcc-b7d6-405c-9526-8932822e446f.json  d8bbf0e9-0a16-484f-9b8c-42582d379ef3.json  eddb722b-52cf-47d7-ac9f-41100c6178a6.json  f848cf73-d422-43f4-acbc-b5a034ddf822.json
.files/4549197c-ed69-4208-a9d0-d4062ea62636/: 53ada2fb-033e-4aa3-8238-a919103ece94.json  5e5a7ac8-53cf-4234-964b-d180fcf7c9f5.json  (+9 more)
UI-blueprint/: graph.py
agents/: graph.py  graph_helpers.py  nodes.py  schemas.py  state.py
config/: settings.py
core/: agent_factory.py  auth.py  chat_model.py  data_store.py  file_data_layer.py  llm.py
docs/: project_rebuild_guide.md
main/: app.py  chainlit_blueprint.md  checks.py  config.py  dummy_data.csv  environment_info.md  generate_dummy_csv.py  langgraph_blueprint.md  main.py  plan.md
public/: test.css  test.js  theme.json
test/: app.py  checks.py  graph.py  manual_testing.md  test_artifacts.py
tools/: __init__.py  data_tools.py  metrics.py  report_tools.py  template_extractor.py
ui/: chat_history.py  components.py
utils/: docx_export.py  pptx_builder.py  section_splitter.py
(+337 files in other folders)
